# adt-chat-editor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  langgraph.json  pyproject.toml
.code_quality/: .flake8  bandit.yaml  pyproject_black.toml
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/examples/: sample_html.html
data/input/: sample_html.html
data/output/: sample_html.html
frontend/: index.html
frontend/assets/: AxiosInstance-BS3F7kwY.js  AxiosInstance-CSILGNeQ.js  card-DNNhlwbE.js  card-DatusseW.js  check-FfxgcpKZ.js  check-oNzHQlFm.js  index-09_x6-V9.js  index-1LCbdGr7.css  index-2sJI5soy.js  index-33OvnjXQ.js  index-4tadidy6.js  index-6kcS5NM7.js  index-B0VRWvN0.js  index-B15ZP-N2.js  index-B72YaPnv.js  index-BA42ZmKN.js  index-BAB2Gb1a.js  index-BB86vDFm.js  index-BFxxu_RJ.js  index-BFyjqIUx.css  index-BI2CyEV9.js  index-BM_wgfN0.js  index-BOPPTGQe.js  index-BTcomH8x.js  index-BYEfGaie.js  index-BYhtu7LB.js  index-BZ-0Iu8w.js  index-BelKWpbB.js  index-Bh4HjRJE.js  index-Bhswy60o.css  index-BjPW-DtZ.js  index-Bmo_hLDc.js  index-BpFbEPGk.css  index-Btqfdf1G.js  index-BvsBDORF.js  index-BxMt4gZ8.js  index-BxgXSgJh.css  index-ByOdkxLo.js  index-Bys8UgqG.js  index-C38dNV5U.js  (+58 more)
scripts/: configure_env.bat  configure_env.sh
src/: __init__.py  utils.py
src/adt_utils/: __init__.py  script_registry.py
src/api/: app.py  main.py  startup_fix_and_collect.py
src/core/: git_manager_provider.py  git_version_manager.py  state_loader.py
src/llm/: llm_call.py  llm_client.py  llm_factory.py
src/prompts/: __init__.py  asset_transferring_agent.py  codex_context.py  codex_fallback_agent.py  planner.py  system.py  (+5 more)
tests/: conftest.py  test_actions_agentic.py  test_api_integration.py  test_command_sanitizer.py  test_file_utils.py  test_messages.py  test_publish_api.py  test_state_loader.py  test_workflow_routes.py
(+81 files in other folders)
